--- a/cromwell_configs/cromwell.docker.config
+++ b/cromwell_configs/cromwell.docker.config
@@ -1,5 +1,10 @@
 # include the application.conf at the top
 include required(classpath("application"))
+
+call-caching {
+  enabled = true
+  invalidate-bad-cache-results = false
+}
  
 backend {
    default = "Docker"
@@ -26,8 +31,27 @@ backend {
                -v /mnt/data0/:/mnt/data0/ \
                ${docker} < ${script}
             """
- 
-         }
-      }
-   }
+            filesystems {
+                local {
+                    localization: [
+                        "soft-link", "copy", "hard-link"
+                    ]
+                    caching {
+                        duplication-strategy: [
+                            "soft-link", "copy", "hard-link"
+                        ]
+                        hashing-strategy: "path"
+         		}
+      		}
+   	}
+    }
+  }
 }
+}
+
+
+
+
+
+
+
