more options for scalability

--- a/cromwell_configs/cromwell.docker.config
+++ b/cromwell_configs/cromwell.docker.config
@@ -13,11 +13,13 @@ backend {
          actor-factory = "cromwell.backend.impl.sfs.config.ConfigBackendLifecycleActorFactory"
          config {
  
-            concurrent-job-limit = 1
+            concurrent-job-limit = 10
             run-in-background = true
  
             runtime-attributes = """
             String? docker
+            Int cpus = 16
+            Int requested_memory_mb_per_core = 6000
             String docker_user = "$EUID"
             """
             submit = "/bin/bash ${script}"
@@ -31,27 +33,8 @@ backend {
                -v /mnt/data0/:/mnt/data0/ \
                ${docker} < ${script}
             """
-            filesystems {
-                local {
-                    localization: [
-                        "soft-link", "copy", "hard-link"
-                    ]
-                    caching {
-                        duplication-strategy: [
-                            "soft-link", "copy", "hard-link"
-                        ]
-                        hashing-strategy: "path"
-         		}
-      		}
-   	}
+         
+      }
     }
-  }
+    }
 }
-}
-
-
-
-
-
-
-
