add runtime attributes for cpus, memory

--- a/cromwell_configs/cromwell.docker.config
+++ b/cromwell_configs/cromwell.docker.config
@@ -18,8 +18,8 @@ backend {
  
             runtime-attributes = """
             String? docker
-            Int cpus = 16
-            Int requested_memory_mb_per_core = 6000
+            Int? cpu = 8
+            Int? memory = 8
             String docker_user = "$EUID"
             """
             submit = "/bin/bash ${script}"
