--- a/cromwell_configs/cromwell.docker.config
+++ b/cromwell_configs/cromwell.docker.config
@@ -1,40 +1,41 @@
 # include the application.conf at the top
 include required(classpath("application"))
-
-call-caching {
-  enabled = true
-  invalidate-bad-cache-results = false
-}
  
 backend {
-   default = "Docker"
-   providers {
-      Docker {
-         actor-factory = "cromwell.backend.impl.sfs.config.ConfigBackendLifecycleActorFactory"
-         config {
- 
-            concurrent-job-limit = 10
-            run-in-background = true
- 
-            runtime-attributes = """
-            String? docker
-            Int cpus = 16
-            Int requested_memory_mb_per_core = 6000
-            String docker_user = "$EUID"
-            """
-            submit = "/bin/bash ${script}"
- 
-            submit-docker = """
-            docker run \
-               --rm -i \
-               ${"--user " + docker_user} \
-               --entrypoint /bin/bash \
-               -v ${cwd}:${docker_cwd} \
-               -v /mnt/data0/:/mnt/data0/ \
-               ${docker} < ${script}
-            """
-         
-      }
-    }
-    }
+	default = "docker"
+	providers {
+		docker {
+		actor-factory = "cromwell.backend.impl.sfs.config.ConfigBackendLifecycleActorFactory"
+			config {
+				concurrent-job-limit = 10
+				run-in-background = true
+
+				runtime-attributes = """
+				String? docker
+				Int? cpu = 16
+				Int? memory = 8
+				String docker_user = "$EUID"
+				"""
+				submit = "/bin/bash ${script}"
+
+				submit-docker = """
+				docker run \
+				--rm -i \
+				${"--user " + docker_user} \
+				--entrypoint /bin/bash \
+				-v ${cwd}:${docker_cwd} \
+				-v /mnt/data0/:/mnt/data0/ \
+				${docker} < ${script}
+				""" 
+				caching {
+					enabled = true
+				}	
+			}
+		}
+	}
 }
+
+call-caching {
+	enabled = true
+}
+
