mysql db in docker container

--- a/cromwell_configs/cromwell.docker.config
+++ b/cromwell_configs/cromwell.docker.config
@@ -1,11 +1,6 @@
 # include the application.conf at the top
 include required(classpath("application"))
 
-call-caching {
-  enabled = true
-  invalidate-bad-cache-results = false
-}
- 
 backend {
    default = "Docker"
    providers {
@@ -32,9 +27,29 @@ backend {
                -v ${cwd}:${docker_cwd} \
                -v /mnt/data0/:/mnt/data0/ \
                ${docker} < ${script}
-            """
-         
+            """ 
       }
     }
     }
 }
+
+call-caching {
+  enabled = true
+}
+
+webservice {
+  port = 8000
+  interface = 127.0.0.1 
+}
+
+database {
+      profile = "slick.jdbc.MySQLProfile$"
+      db {
+        url = "jdbc:mysql://localhost/PipelineDatabase?rewriteBatchedStatements=true&useSSL=false"
+        user = "pipeline"
+        password = "Run@pipelines9061"
+        driver = "com.mysql.cj.jdbc.Driver"
+        connectionTimeout = 5000
+      }
+}
+
