--- a/cromwell_configs/cromwell.docker.config
+++ b/cromwell_configs/cromwell.docker.config
@@ -20,7 +20,7 @@ backend {
             submit = "/bin/bash ${script}"
  
             submit-docker = """
-            docker run \
+            docker run -d \
                --rm -i \
                ${"--user " + docker_user} \
                --entrypoint /bin/bash \
@@ -45,7 +45,7 @@ webservice {
 database {
       profile = "slick.jdbc.MySQLProfile$"
       db {
-        url = "jdbc:mysql://localhost/PipelineDatabase?rewriteBatchedStatements=true&useSSL=false"
+        url = "jdbc:mysql://0.0.0.0:52000/PipelineDatabase?allowPublicKeyRetrieval=true&rewriteBatchedStatements=true&useSSL=false" 
         user = "pipeline"
         password = "Run@pipelines9061"
         driver = "com.mysql.cj.jdbc.Driver"
