--- a/cromwell_configs/cromwell.docker.config
+++ b/cromwell_configs/cromwell.docker.config
@@ -20,7 +20,7 @@ backend {
             submit = "/bin/bash ${script}"
  
             submit-docker = """
-            docker run -d \
+            docker run \
                --rm -i \
                ${"--user " + docker_user} \
                --entrypoint /bin/bash \
