--- a/cromwell_configs/cromwell.docker.config
+++ b/cromwell_configs/cromwell.docker.config
@@ -13,14 +13,14 @@ backend {
  
             runtime-attributes = """
             String? docker
-            Int? cpu = 8
-            Int? memory = 8
+            Int? cpu = 10
+            Int? memory = 10
             String docker_user = "$EUID"
             """
             submit = "/bin/bash ${script}"
  
             submit-docker = """
-            docker run -d \
+            docker run \
                --rm -i \
                ${"--user " + docker_user} \
                --entrypoint /bin/bash \
