--- a/cromwell_configs/cromwell.docker.config
+++ b/cromwell_configs/cromwell.docker.config
@@ -2,36 +2,37 @@
 include required(classpath("application"))
 
 backend {
-   default = "Docker"
-   providers {
-      Docker {
-         actor-factory = "cromwell.backend.impl.sfs.config.ConfigBackendLifecycleActorFactory"
-         config {
- 
-            concurrent-job-limit = 10
-            run-in-background = true
- 
-            runtime-attributes = """
-            String? docker
-            Int? cpu = 10
-            Int? memory = 10
-            String docker_user = "$EUID"
-            """
-            submit = "/bin/bash ${script}"
- 
-            submit-docker = """
-            docker run \
-               --rm -i \
-               ${"--user " + docker_user} \
-               --entrypoint /bin/bash \
-               -v ${cwd}:${docker_cwd} \
-               -v /mnt/data0/:/mnt/data0/ \
-               ${docker} < ${script}
-            """ 
-      }
-    }
-    }
-}
+	default = "Docker"
+	providers {
+		Docker {
+			actor-factory = "cromwell.backend.impl.sfs.config.ConfigBackendLifecycleActorFactory"
+			config {
+
+				concurrent-job-limit = 10
+				run-in-background = true
+
+				runtime-attributes = """
+				String? docker
+				String? cpu
+				String docker_user = "$EUID"
+				"""
+				submit = "/bin/bash ${script}"
+
+
+				submit-docker = """
+				docker run \
+				--rm -i \
+				--cpus=${cpu} \
+				${"--user " + docker_user} \
+				--entrypoint /bin/bash \
+				-v ${cwd}:${docker_cwd} \
+				-v /mnt/data0/:/mnt/data0/ \
+				${docker} < ${script}
+				""" 
+			}
+		}
+	}
+}   
 
 call-caching {
   enabled = true
@@ -43,13 +44,12 @@ webservice {
 }
 
 database {
-      profile = "slick.jdbc.MySQLProfile$"
-      db {
-        url = "jdbc:mysql://0.0.0.0:52000/PipelineDatabase?allowPublicKeyRetrieval=true&rewriteBatchedStatements=true&useSSL=false" 
-        user = "pipeline"
-        password = "Run@pipelines9061"
-        driver = "com.mysql.cj.jdbc.Driver"
-        connectionTimeout = 5000
-      }
+	profile = "slick.jdbc.MySQLProfile$"
+	db {
+		url = "jdbc:mysql://0.0.0.0:52000/PipelineDatabase?allowPublicKeyRetrieval=true&rewriteBatchedStatements=true&useSSL=false"
+		user = "pipeline"
+		password = "Run@pipelines9061"
+		driver = "com.mysql.cj.jdbc.Driver"
+		connectionTimeout = 10000
+	}
 }
-
