--- a/cromwell_configs/cromwell.docker.config
+++ b/cromwell_configs/cromwell.docker.config
@@ -13,7 +13,7 @@ backend {
 
 				runtime-attributes = """
 				String? docker
-				String? cpu
+				Int? cpu
 				String docker_user = "$EUID"
 				"""
 				submit = "/bin/bash ${script}"
