working memory scaling

--- a/cromwell_configs/cromwell.docker.config
+++ b/cromwell_configs/cromwell.docker.config
@@ -14,6 +14,7 @@ backend {
 				runtime-attributes = """
 				String? docker
 				Int? cpu
+				Int? mem
 				String docker_user = "$EUID"
 				"""
 				submit = "/bin/bash ${script}"
@@ -23,6 +24,7 @@ backend {
 				docker run \
 				--rm -i \
 				--cpus=${cpu} \
+				--memory="${mem}g" \
 				${"--user " + docker_user} \
 				--entrypoint /bin/bash \
 				-v ${cwd}:${docker_cwd} \
