--- a/cromwell_configs/cromwell.docker.config
+++ b/cromwell_configs/cromwell.docker.config
@@ -22,10 +22,11 @@ backend {
 
 				submit-docker = """
 				docker run \
-				--rm -i -d \
+				--rm -i \
 				--cpus=${cpu} \
 				--memory="${mem}g" \
 				--entrypoint /bin/bash \
+				--user "${docker_user}" \
 				-v ${cwd}:${docker_cwd} \
 				-v /mnt/data0/:/mnt/data0/ \
 				${docker} < ${script}
