--- a/.github/workflows/zip-wdl-tasks.yml
+++ b/.github/workflows/zip-wdl-tasks.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add workflows/*/wdl_tasks.zip || true
+          git add workflows/*/imports.zip || true
           if ! git diff --cached --quiet; then
             git commit -m "Auto-update wdl_tasks.zip"
             git push
