--- a/.github/workflows/zip-wdl-tasks.yml
+++ b/.github/workflows/zip-wdl-tasks.yml
@@ -29,7 +29,7 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add workflows/*/imports.zip || true
           if ! git diff --cached --quiet; then
-            git commit -m "Auto-update wdl_tasks.zip"
+            git commit -m "Auto-update imports.zip"
             git push
           else
             echo "No changes to commit."
