--- a/cromwell_configs/cromwell.docker.config
+++ b/cromwell_configs/cromwell.docker.config
@@ -1,15 +1,27 @@
 # include the application.conf at the top
 include required(classpath("application"))
 
+#filesystems.local.localization = ["hard-link", "soft-link", "copy"]
+
+#filesystems.local.enabled: true
+#filesystems.local.localization = ["hard-link", "soft-link", "copy"]
+#class = "cromwell.filesystems.local.LocalFileSystem"
+#filesystems {
+#  local {
+#    class = "cromwell.filesystems.local.LocalFileSystem"
+#    localization = ["hard-link", "soft-link", "copy"] # How Cromwell should localize files into the backend, listed in decreasing priority
+#  }
+#}
+
 backend {
-	default = "Docker"
+	default = "Docker" # Default backend 
 	providers {
 		Docker {
 			actor-factory = "cromwell.backend.impl.sfs.config.ConfigBackendLifecycleActorFactory"
 			config {
 
-				concurrent-job-limit = 10
-				run-in-background = true
+				concurrent-job-limit = 10 # Maximum number of concurrent jobs
+				run-in-background = true 
 
 				runtime-attributes = """
 				String? docker
@@ -19,7 +31,6 @@ backend {
 				"""
 				submit = "/bin/bash ${script}"
 
-
 				submit-docker = """
 				docker run \
 				--rm -i \
@@ -28,12 +39,23 @@ backend {
 				--entrypoint /bin/bash \
 				--user "${docker_user}" \
 				-v ${cwd}:${docker_cwd} \
-				-v /mnt/data0/:/mnt/data0/ \
 				${docker} < ${script}
 				""" 
 			}
 		}
-	}
+		Local {
+			actor-factory = "cromwell.backend.impl.sfs.config.ConfigBackendLifecycleActorFactory"
+			config {
+				runtime-attributes = """
+				String? docker
+				Int? cpu = 1
+				Int? mem = 2
+				String docker_user = "$EUID"
+				"""
+				submit = "/bin/bash ${script}"
+			}
+		}
+	}	
 }   
 
 call-caching {
