--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,6 +1,10 @@
 name: Validate WDL scripts
 
 on:
+  workflow_run:
+    workflows: ["Build imports zips"] 
+    types:
+      - completed
   push:
     branches: 
       - main
@@ -19,7 +23,6 @@ jobs:
   validate:
     name: Validate WDL workflow with WOMtool
     runs-on: ubuntu-latest
-    needs: zip
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
