--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       
-      - name: Download WOMtool .jar
+      - name: Download WOMtool jar
 	id: download_womtool
         run: |
 	  wget -q  https://github.com/broadinstitute/cromwell/releases/download/90/womtool-90.jar -O womtool.jar
