--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,14 +1,11 @@
 name: Validate WDL scripts
 
 on:
+  workflow_run:
+    workflows: ["Build imports zips"]
+    types: [completed]
   push:
-    branches: 
-      - main
-      - dev-branch
-    paths:
-      - "workflows/*/imports.zip"		# imports (from zip workflow)
-      - ".github/workflows/validate.yml"	# the workflow itself
-  pull_request:
+    branches: [dev-branch]
     paths:
       - "workflows/*/imports.zip"
       - ".github/workflows/validate.yml"
