--- a/.github/workflows/build-wdl-graph.yml
+++ b/.github/workflows/build-wdl-graph.yml
@@ -28,6 +28,11 @@ jobs:
       - name: Install Graphviz
         run: sudo apt-get update && sudo apt-get install -y graphviz
 
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 2 
+
       - name: Detect changed WDLs
         id: changed
         run: |
